# grpc-hello-world

./: .gitignore  CMakeLists.txt  CMakeWindows.bat  README.md
cmake/: protobuf-generate.cmake
cmake/Modules/gRPC/: FindgRPC.cmake
cmake/Modules/gRPC-submodule/: FindgRPC.cmake
hello_world_client/: CMakeLists.txt  main.cpp
hello_world_client_findprotobuf_protobuf_generate/: CMakeLists.txt
hello_world_server/: CMakeLists.txt  service_impl.cpp  service_impl.h
hello_world_server_findprotobuf_protobuf_generate/: CMakeLists.txt  main.cpp
hello_world_server_findprotobuf_protobuf_generate/proto/: hello_world.proto
